# mertrace

./: .gitignore  CONTEXT.md  Makefile  PROJECT_MAP.md  README.md  SYSTEM_DESIGN.md  TECH_STACK.md  env.example
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: memory.py  orchestrator.py  tools.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  files.py  projects.py
backend/app/core/: config.py  logging.py
backend/app/ingestion/: chunker.py  cloner.py  embedder.py  pipeline.py  umap_builder.py  walker.py
backend/app/models/: chunk.py  project.py
backend/app/rag/: context_assembler.py  reranker.py  retriever.py  synthesizer.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_ingestion.py  test_rag.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ProjectBar.tsx
frontend/src/components/ChatPanel/: MessageBubble.tsx  index.tsx
frontend/src/components/FileExplorer/: index.tsx
frontend/src/components/VectorViz/: FilePreview.tsx  index.tsx
frontend/src/hooks/: useProject.ts  useWebSocket.ts
frontend/src/store/: appStore.ts
